################################################################################
# Spectral Python (SPy) package change log
################################################################################

2012-02-23	tboggs <tboggs@users.sourceforge.net>

    Added numpy.memmap objects to SpyFile instances.  This improves read speed
    by about a factor of 10 (although algorithms are still about 10 times faster
    when using in-memory arrays).
    
    * io/bilfile.py:
      (BilFile.__init__): Set memmmap member for buffered input.
      (BilFile.read_band, read_bands, read_pixel, read_subregion, read_subimage,
       read_datum): Use memmap for reading file, if available.
    * io/bipfile.py:
      (BipFile.__init__): Set memmmap member for buffered input.
      (BipFile.read_band, read_bands, read_pixel, read_subregion, read_subimage,
       read_datum): Use memmap for reading file, if available.
    * io/bsqfile.py:
      (BsqFile.__init__): Set memmmap member for buffered input.
      (BsqFile.read_band, read_bands, read_pixel, read_subregion, read_subimage,
       read_datum): Use memmap for reading file, if available.

2012-02-19	tboggs <tboggs@users.sourceforge.net>

    Updated version number to '0.7' in __init__.py

2012-02-19	tboggs <tboggs@users.sourceforge.net>

    Changed many method and function names to be consitent with external
    modules (this affects almost every file so I won't list them here). Fixed
    several bugs affecting file reading for several formats.
    
    * io/bipfile.py (BipFile.read_bands): convert tuple to list to prevent
      an exception.
    * io/bsqfile:
      (BsqFile.read_subregion):  Fixed a bug that caused reading wrong section
      of data when lower row limit is non-zero.
      (BsqFile.read_subimage):  Fixed a bug that caused reading wrong data
      values when lower row limit is non-zero.

2011-01-28	tboggs <tboggs@users.sourceforge.net>
