@@ -2,6 +2,16 @@
 # Spectral Python (SPy) package change log
 ################################################################################
 
+2012-05-30	tboggs <tboggs@users.sourceforge.net>
+
+    Fixed bad search/replace that caused infinite recursion in some read funcs.
+    
+    * spectral.py(ImageArray):
+      (read_band): Mislabled readBand warning caused infinite recursion.
+      (read_bands): Mislabled readBands warning caused infinite recursion.
+      (read_pixel): Mislabled readPixel warning caused infinite recursion.
+      (read_datum): Mislabled readDatum warning caused infinite recursion.
+    * io/spyfile.py: Fixed doc string
 2012-02-23	tboggs <tboggs@users.sourceforge.net>
 
     Added numpy.memmap objects to SpyFile instances.  This improves read speed
